# livebook-indicator

./: Cargo.toml  README.md
assets/: dbus-activation.xml
src/: livebook.rs  main.rs
src/livebook/: menu.rs  open.rs
