[package]
name = "livebook-indicator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.15.5"
libappindicator = "0.7.1"
subprocess = "0.2.9"
signal-hook = "0.3.4"
ctrlc = { version = "3.2.3", features = ["termination"] }