[package]
name = "livebook-indicator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.15.5"
libappindicator = "0.7.1"
subprocess = "0.2.9"
regex = "1.6.0"
lazy_static = "1.4.0"
ctrlc = { version = "3.2.3", features = ["termination"] }
nix = "0.25.0"
open = "3.0.2"
url = "2.2.2"